# turboquant-mlx

./: .gitignore  README.md  demo_7b.py  demo_mlx_lm.py  pyproject.toml  run.py  server.py  turbo_cache.py
tests/: test_core.py  test_fused_attn.py  test_metal.py  test_speed.py
turboquant_mlx/: __init__.py  adaptive.py  cache.py  fused_attention.py  metal_kernels.py  metal_kernels_v2.py  metal_kernels_v4.py  metal_quantize.py  patch.py  quantizer.py
